--- a/api/vehicle/models/vehicle.settings.json
+++ b/api/vehicle/models/vehicle.settings.json
@@ -13,6 +13,10 @@
   "attributes": {
     "name": {
       "type": "string"
+    },
+    "product": {
+      "via": "vehicles",
+      "model": "product"
     }
   }
 }
